// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Registry Vault Risk Risk Factors calculates debt leverage ratio and collateral ratio 1`] = `
Object {
  "aboveMaxLeverageRatio": false,
  "assetLiquidationThreshold": Array [
    Object {
      "_isTokenBalance": true,
      "hex": "0x05c7103c",
      "network": "arbitrum",
      "tokenId": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a360009",
    },
  ],
  "assets": Object {
    "_isTokenBalance": true,
    "hex": "0x0f61da",
    "network": "arbitrum",
    "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
  },
  "collateralRatio": 0.124500545,
  "debts": Object {
    "_isTokenBalance": true,
    "hex": "-0x0dadde",
    "network": "arbitrum",
    "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
  },
  "leverageRatio": 8.032093353486927,
  "liquidationPrice": Array [
    Object {
      "collateral": Object {
        "address": "0x1344a36a1b56144c3bc62e7757377d288fde0369",
        "currencyId": 3,
        "decimals": 8,
        "id": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a360009",
        "isFCashDebt": false,
        "maturity": 1695168000,
        "name": "Vault Shares in USDC for 0xae38f4b960f44d86e798f36a374a1ac3f2d859fa Fixed Term @ 1695168000",
        "network": "arbitrum",
        "symbol": "vsUSDC:0xae38f4b960f44d86e798f36a374a1ac3f2d859fa:fixed@1695168000",
        "tokenInterface": "ERC1155",
        "tokenType": "VaultShare",
        "totalSupply": Object {
          "_isTokenBalance": true,
          "hex": "0x2ee8204f",
          "network": "arbitrum",
          "tokenId": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a360009",
        },
        "underlying": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "vaultAddress": "0xae38f4b960f44d86e798f36a374a1ac3f2d859fa",
      },
      "debt": Object {
        "address": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "currencyId": 3,
        "decimals": 6,
        "id": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "isFCashDebt": false,
        "name": "USD Coin (Arb1)",
        "network": "arbitrum",
        "symbol": "USDC",
        "tokenInterface": "ERC20",
        "tokenType": "Underlying",
      },
      "price": Object {
        "_isTokenBalance": true,
        "hex": "0x0ee908",
        "network": "arbitrum",
        "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
      },
      "riskExposure": Object {
        "isCrossCurrency": false,
        "isPrimeDebt": false,
        "risk": "VaultShare",
      },
    },
  ],
  "netWorth": Object {
    "_isTokenBalance": true,
    "hex": "0x01b3fc",
    "network": "arbitrum",
    "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
  },
}
`;

exports[`With Registry Vault Risk Risk Factors calculates debt with cash leverage ratio and collateral ratio 1`] = `
Object {
  "aboveMaxLeverageRatio": false,
  "assetLiquidationThreshold": Array [
    Object {
      "_isTokenBalance": true,
      "hex": "0x05b66da4",
      "network": "arbitrum",
      "tokenId": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a360009",
    },
    Object {
      "_isTokenBalance": true,
      "hex": "0x05b66da4",
      "network": "arbitrum",
      "tokenId": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a360009",
    },
  ],
  "assets": Object {
    "_isTokenBalance": true,
    "hex": "0x0f893c",
    "network": "arbitrum",
    "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
  },
  "collateralRatio": 0.137290781,
  "debts": Object {
    "_isTokenBalance": true,
    "hex": "-0x0dadde",
    "network": "arbitrum",
    "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
  },
  "leverageRatio": 7.283810265454022,
  "liquidationPrice": Array [
    Object {
      "collateral": Object {
        "address": "0x1344a36a1b56144c3bc62e7757377d288fde0369",
        "currencyId": 3,
        "decimals": 8,
        "id": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a360009",
        "isFCashDebt": false,
        "maturity": 1695168000,
        "name": "Vault Shares in USDC for 0xae38f4b960f44d86e798f36a374a1ac3f2d859fa Fixed Term @ 1695168000",
        "network": "arbitrum",
        "symbol": "vsUSDC:0xae38f4b960f44d86e798f36a374a1ac3f2d859fa:fixed@1695168000",
        "tokenInterface": "ERC1155",
        "tokenType": "VaultShare",
        "totalSupply": Object {
          "_isTokenBalance": true,
          "hex": "0x2ee8204f",
          "network": "arbitrum",
          "tokenId": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a360009",
        },
        "underlying": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "vaultAddress": "0xae38f4b960f44d86e798f36a374a1ac3f2d859fa",
      },
      "debt": Object {
        "address": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "currencyId": 3,
        "decimals": 6,
        "id": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "isFCashDebt": false,
        "name": "USD Coin (Arb1)",
        "network": "arbitrum",
        "symbol": "USDC",
        "tokenInterface": "ERC20",
        "tokenType": "Underlying",
      },
      "price": Object {
        "_isTokenBalance": true,
        "hex": "0x0ebe1a",
        "network": "arbitrum",
        "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
      },
      "riskExposure": Object {
        "isCrossCurrency": false,
        "isPrimeDebt": false,
        "risk": "VaultShare",
      },
    },
    Object {
      "collateral": Object {
        "address": "0x1344a36a1b56144c3bc62e7757377d288fde0369",
        "currencyId": 3,
        "decimals": 8,
        "id": "0x00000000ae38f4b960f44d86e798f36a374a1ac3f2d859fa000300650a36000b",
        "isFCashDebt": false,
        "maturity": 1695168000,
        "name": "Vault USDC Cash for 0xae38f4b960f44d86e798f36a374a1ac3f2d859fa Fixed Term @ 1695168000",
        "network": "arbitrum",
        "symbol": "vcUSDC:0xae38f4b960f44d86e798f36a374a1ac3f2d859fa:fixed@1695168000",
        "tokenInterface": "ERC1155",
        "tokenType": "VaultCash",
        "underlying": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "vaultAddress": "0xae38f4b960f44d86e798f36a374a1ac3f2d859fa",
      },
      "debt": Object {
        "address": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "currencyId": 3,
        "decimals": 6,
        "id": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
        "isFCashDebt": false,
        "name": "USD Coin (Arb1)",
        "network": "arbitrum",
        "symbol": "USDC",
        "tokenInterface": "ERC20",
        "tokenType": "Underlying",
      },
      "price": Object {
        "_isTokenBalance": true,
        "hex": "0x0ebe1a",
        "network": "arbitrum",
        "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
      },
      "riskExposure": Object {
        "isCrossCurrency": false,
        "isPrimeDebt": false,
        "risk": "VaultCash",
      },
    },
  ],
  "netWorth": Object {
    "_isTokenBalance": true,
    "hex": "0x01db5e",
    "network": "arbitrum",
    "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
  },
}
`;
